fix: fix handle arrow hit, so archer can use new arrows correctly